--- a/face_log.html
+++ b/face_log.html
@@ -3,22 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,100..900;1,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Rubik+Mono+One&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
-      rel="stylesheet"
-    />
-    <!-- css -->
-    <title>Sign up - F-LOCK</title>
+    <title>Face Log - F-LOCK</title>
     <link rel="stylesheet" href="./style/main_header.css" />
     <link rel="stylesheet" href="./style/main_footer.css" />
-    <link rel="stylesheet" href="./style/logon.css" />
-    <!-- <link rel="stylesheet" href="./style/responsive.css" /> -->
+    <link rel="stylesheet" href="./style/face_log.css" />
   </head>
   <body>
-    <!-- menu -->
     <section class="o">
       <div class="menu">
         <h2>F-LOCK</h2>
@@ -32,39 +22,27 @@
       </div>
       <hr />
     </section>
-    <!-- header -->
     <div class="header">
-      <p id="row1">SIGN IN</p>
-      <h1>Ready to take the next step?</h1>
-      <p id="row3">Fill out the form to start your journey with us</p>
+      <p id="row1">Welcome</p>
+      <h1>Please select a login method</h1>
     </div>
-
-    <!-- Form đăng nhập -->
-    <div class="register-container login-container">
-      <div class="right-side">
-        <form id="loginForm">
-          <div class="form-group full">
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" required />
-          </div>
-
-          <div class="form-group full">
-            <label for="password">Password</label>
-            <input type="password" id="password" name="password" required />
-          </div>
-
-          <button type="submit" class="btn">LOG ON</button>
-          <div class="register-link">
-            If you don’t have an account, please
-            <a href="./register.html">Register</a>
-          </div>
-        </form>
+    <div class="team-section">
+      <div class="team-grid">
+        <div class="team-card">
+          <a href="./face_id_login.html">
+            <img src="./design/SOURCE_IMAGE/faceid.png" alt="Face ID" />
+          </a>
+          <h3>Face ID Login</h3>
+        </div>
+        <div class="team-card">
+          <a href="./pass_lock_login.html">
+            <img src="./design/SOURCE_IMAGE/smartkey.png" alt="Password" />
+          </a>
+          <h3>Locker Code Login</h3>
+        </div>
       </div>
     </div>
-    <script src="./backend/logon.js"></script>
   </body>
-
-  <!-- footer -->
   <footer class="footer">
     <div class="footer-content">
       <div class="footer-left">
@@ -74,13 +52,12 @@
           biến việc lưu trữ hằng ngày thành một trải nghiệm thông minh và bảo
           mật hơn!
         </p>
-
         <nav class="footer-nav">
           <a href="./index.html">Home</a>
           <a href="./guild.html">User Guide</a>
           <a href="./open.html">Open Locker</a>
           <a href="./about_us.html">About</a>
-          <a href="./face_log.html">ID</a>
+          <a href="#">ID</a>
         </nav>
       </div>
 
