--- a/guild.html
+++ b/guild.html
@@ -105,12 +105,12 @@
           mật hơn!
         </p>
 
-        <nav class="./footer-nav">
+        <nav class="footer-nav">
           <a href="./index.html">Home</a>
           <a href="#">User Guide</a>
           <a href="./open.html">Open Locker</a>
           <a href="./about_us.html">About</a>
-          <a href="./face_res.html">ID</a>
+          <a href="./face_log.html">ID</a>
         </nav>
       </div>
 
