--- a/pass_lock_login.html
+++ b/pass_lock_login.html
@@ -3,62 +3,46 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Epilogue:wght@400;600&family=Rubik:wght@400;600&display=swap"
-      rel="stylesheet"
-    />
-    <title>Face Scan</title>
-    <!-- css -->
+    <title>Locker Code Login - F-LOCK</title>
     <link rel="stylesheet" href="./style/main_header.css" />
     <link rel="stylesheet" href="./style/main_footer.css" />
-    <link rel="stylesheet" href="./style/face_id.css" />
+    <link rel="stylesheet" href="./style/pass_lock_login.css" />
   </head>
-  <!-- header -->
-  <section class="o">
-    <div class="menu">
-      <h2>F-LOCK</h2>
-      <a href="./menu.html">
-        <img
-          src="./design/SOURCE_IMAGE/Menu.png"
-          alt="menu"
-          class="icon_menu"
-        />
-      </a>
-    </div>
-    <hr />
-  </section>
   <body>
+    <section class="o">
+      <div class="menu">
+        <h2>F-LOCK</h2>
+        <a href="./menu.html">
+          <img
+            src="./design/SOURCE_IMAGE/Menu.png"
+            alt="menu"
+            class="icon_menu"
+          />
+        </a>
+      </div>
+      <hr />
+    </section>
     <div class="header">
-      <p id="row1">Our people</p>
-      <h1>We are the better together</h1>
-      <p id="row3">
-        Together, we create a positive impact. Meet the F-LOCK team and see how
-        we turn great ideas into results.
-      </p>
+      <p id="row1">LOGIN</p>
+      <h1>Please enter your locker code</h1>
+      <p id="row3"></p>
     </div>
-
-    <!-- content -->
-    <div class="face-scan-section">
-      <div class="face-scan-wrapper">
-        <img
-          src="./design/SOURCE_IMAGE/scan.jpg"
-          alt="face scan"
-          class="face_scan"
-        />
-        <button class="take-btn" onclick="startCapture()">Take</button>
+    <div class="register-container login-container">
+      <div class="right-side">
+        <form id="loginLockerForm">
+          <div class="form-group full">
+            <label for="lockerCode">Locker Code</label>
+            <input type="text" id="lockerCode" name="lockerCode" required />
+          </div>
+          <button type="submit" class="btn">Login</button>
+          <div class="register-link">
+            If you want to login with Face ID, please click
+            <a href="./face_id_login.html">Face ID</a>
+          </div>
+        </form>
       </div>
     </div>
-
-    <!-- script -->
-    <script src="./backend/camera_client.js"></script>
-    <script src="./backend/camera_loader.js"></script>
-    <script src="./backend/camera_pi.js"></script>
   </body>
-
-  <!-- footer -->
   <footer class="footer">
     <div class="footer-content">
       <div class="footer-left">
@@ -76,7 +60,6 @@
           <a href="./face_log.html">ID</a>
         </nav>
       </div>
-
       <div class="footer-right">
         <p>
           Are you ready to unlock a smarter and more secure experience with our
@@ -90,7 +73,6 @@
         </p>
       </div>
     </div>
-
     <hr class="footer-line" />
     <p class="copyright">© 2025 F-LOCK. All rights reserved.</p>
   </footer>
