--- a/detail.html
+++ b/detail.html
@@ -7,8 +7,8 @@
       href="https://fonts.googleapis.com/css2?family=Epilogue:wght@400;600&family=Rubik:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./style/detail.css" />
-    <title>Account Detail - SMART BOX</title>
+    <link rel="stylesheet" href="./style/menu.css" />
+    <title>Account Detail</title>
   </head>
   <body>
     <div class="container">
@@ -24,22 +24,19 @@
 
       <!-- RIGHT SIDE -->
       <div class="right-side">
-        <div class="out">
-          <a href="./index.html">
-            <img src="./design/SOURCE_IMAGE/Xpng.png" alt="out" />
-          </a>
-        </div>
         <div class="form-container">
           <h1 class="headline">Welcome to SMART BOX</h1>
-          <p class="subheadline">Account Detail</p>
+          <h2 class="subheadline">Account Details</h2>
 
           <div class="account-info">
-            <p><strong>Username:</strong> <span id="username"></span></p>
+            <p><strong>Name:</strong> <span id="name"></span></p>
             <p><strong>Email:</strong> <span id="email"></span></p>
+            <p><strong>Phone Number:</strong> <span id="phone"></span></p>
             <p><strong>Password:</strong> <span id="password"></span></p>
+            <p><strong>Hint Password:</strong> <span id="hint"></span></p>
           </div>
 
-          <button id="save-btn" class="signup-btn" style="display: none">
+          <button id="save-btn" class="menu-btn" style="display: none">
             Save
           </button>
         </div>
