--- a/detail.html
+++ b/detail.html
@@ -7,7 +7,7 @@
       href="https://fonts.googleapis.com/css2?family=Epilogue:wght@400;600&family=Rubik:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./style/menu.css" />
+    <link rel="stylesheet" href="./style/detail.css" />
     <title>Account Detail</title>
   </head>
   <body>
