lan4_(dang_cap)

--- a/face_id.html
+++ b/face_id.html
@@ -56,6 +56,7 @@
     <script src="./backend/camera_client.js"></script>
     <script src="./backend/camera_loader.js"></script>
     <script src="./backend/camera_pi.js"></script>
+    <script src="./backend/face_id.js"></script>
   </body>
 
   <!-- footer -->
@@ -73,7 +74,7 @@
           <a href="./guild.html">User Guide</a>
           <a href="./open.html">Open Locker</a>
           <a href="./about_us.html">About</a>
-          <a href="./face_log.html">ID</a>
+          <a href="./face_res.html">ID</a>
         </nav>
       </div>
 
