--- a/face_log.html
+++ b/face_log.html
@@ -29,7 +29,7 @@
     <div class="team-section">
       <div class="team-grid">
         <div class="team-card">
-          <a href="./face_id_login.html">
+          <a href="./scan.html">
             <img src="./design/SOURCE_IMAGE/faceid.png" alt="Face ID" />
           </a>
           <h3>Face ID Login</h3>
@@ -57,7 +57,7 @@
           <a href="./guild.html">User Guide</a>
           <a href="./open.html">Open Locker</a>
           <a href="./about_us.html">About</a>
-          <a href="#">ID</a>
+          <a href="./face_res.html">ID</a>
         </nav>
       </div>
 
