--- a/open.html
+++ b/open.html
@@ -44,31 +44,31 @@
     <!-- Content -->
     <div class="face-grid-section">
       <div class="grid-container">
-        <a href="./scan.html" class="grid-item">
+        <a href="./face_log.html" class="grid-item">
           <span>01</span>
         </a>
-        <a href="./scan.html" class="grid-item">
+        <a href="./face_log.html" class="grid-item">
           <span>02</span>
         </a>
-        <a href="./scan.html" class="grid-item">
+        <a href="./face_log.html" class="grid-item">
           <span>03</span>
         </a>
-        <a href="./scan.html" class="grid-item">
+        <a href="./face_log.html" class="grid-item">
           <span>04</span>
         </a>
-        <a href="./scan.html" class="grid-item">
+        <a href="./face_log.html" class="grid-item">
           <span>05</span>
         </a>
-        <a href="./scan.html" class="grid-item">
+        <a href="./face_log.html" class="grid-item">
           <span>06</span>
         </a>
-        <a href="./scan.html" class="grid-item">
+        <a href="./face_log.html" class="grid-item">
           <span>07</span>
         </a>
-        <a href="./scan.html" class="grid-item">
+        <a href="./face_log.html" class="grid-item">
           <span>08</span>
         </a>
-        <a href="./scan.html" class="grid-item">
+        <a href="./face_log.html" class="grid-item">
           <span>09</span>
         </a>
       </div>
@@ -92,7 +92,7 @@
           <a href="./guild.html">User Guide</a>
           <a href="./open.html">Open Locker</a>
           <a href="./about_us.html">About</a>
-          <a href="./face_log.html">ID</a>
+          <a href="./face_res.html">ID</a>
         </nav>
       </div>
 
