--- a/scan.html
+++ b/scan.html
@@ -58,6 +58,7 @@
     <script src="./backend/camera_client.js"></script>
     <script src="./backend/camera_loader.js"></script>
     <script src="./backend/camera_pi.js"></script>
+    <script src="./backend/scan.js"></script>
   </body>
 
   <!-- footer -->
@@ -75,7 +76,7 @@
           <a href="./guild.html">User Guide</a>
           <a href="./open.html">Open Locker</a>
           <a href="./about_us.html">About</a>
-          <a href="./face_log.html">ID</a>
+          <a href="./face_res.html">ID</a>
         </nav>
       </div>
 
