--- a/face_res.html
+++ b/face_res.html
@@ -75,7 +75,7 @@
           <a href="./guild.html">User Guide</a>
           <a href="./open.html">Open Locker</a>
           <a href="./about_us.html">About</a>
-          <a href="./face_log.html">ID</a>
+          <a href="#">ID</a>
         </nav>
       </div>
 
