--- a/face_id.html
+++ b/face_id.html
@@ -3,63 +3,58 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Epilogue:wght@400;600&family=Rubik:wght@400;600&display=swap"
       rel="stylesheet"
     />
     <title>Face Scan</title>
-    <!-- css -->
+
+    <!-- CSS -->
     <link rel="stylesheet" href="./style/main_header.css" />
     <link rel="stylesheet" href="./style/main_footer.css" />
     <link rel="stylesheet" href="./style/face_id.css" />
   </head>
-  <!-- header -->
-  <section class="o">
-    <div class="menu">
-      <h2>F-LOCK</h2>
-      <a href="./menu.html">
-        <img
-          src="./design/SOURCE_IMAGE/Menu.png"
-          alt="menu"
-          class="icon_menu"
-        />
-      </a>
-    </div>
-    <hr />
-  </section>
+
   <body>
+    <!-- Header -->
+    <section class="o">
+      <div class="menu">
+        <h2>F-LOCK</h2>
+        <a href="./menu.html">
+          <img
+            src="./design/SOURCE_IMAGE/Menu.png"
+            alt="menu"
+            class="icon_menu"
+          />
+        </a>
+      </div>
+      <hr />
+    </section>
+
+    <!-- Nội dung -->
     <div class="header">
       <p id="row1">Our people</p>
-      <h1>We are the better together</h1>
+      <h1>We are better together</h1>
       <p id="row3">
         Together, we create a positive impact. Meet the F-LOCK team and see how
         we turn great ideas into results.
       </p>
     </div>
 
-    <!-- content -->
+    <!-- Face Capture Section -->
     <div class="face-scan-section">
       <div class="face-scan-wrapper">
-        <img
-          src="./design/SOURCE_IMAGE/scan.jpg"
-          alt="face scan"
-          class="face_scan"
-        />
-        <button class="take-btn" onclick="startCapture()">Take</button>
+        <video id="cameraPreview" autoplay playsinline></video>
+        <button class="take-btn">📸 Take</button>
+        <p id="status">Checking Raspberry Pi connection...</p>
       </div>
     </div>
 
-    <!-- script -->
-    <script src="./backend/camera_client.js"></script>
-    <script src="./backend/camera_loader.js"></script>
-    <script src="./backend/camera_pi.js"></script>
+    <!-- Scripts -->
     <script src="./backend/face_id.js"></script>
   </body>
 
-  <!-- footer -->
+  <!-- Footer -->
   <footer class="footer">
     <div class="footer-content">
       <div class="footer-left">
