--- a/scan.html
+++ b/scan.html
@@ -16,9 +16,6 @@
     <link rel="stylesheet" href="./style/main_header.css" />
     <link rel="stylesheet" href="./style/main_footer.css" />
     <link rel="stylesheet" href="./style/scan.css" />
-  </head>
-
-  <body>
     <!-- menu -->
     <section class="o">
       <div class="menu">
@@ -42,56 +39,67 @@
         Align your face with the camera for secure verification with F-LOCK.
       </p>
     </div>
+  </head>
 
-    <!-- content -->
-    <div class="face-scan-wrapper">
-      <video id="cameraPreview" autoplay playsinline></video>
-      <div class="recognition-status">
-        <h2 id="status">🕐 Waiting for recognition...</h2>
-      </div>
+  <body>
+    <!-- Header -->
+    <div class="header">
+      <p id="row1">Face Recognition</p>
+      <h1>Smart Locker Scan</h1>
+      <p id="row3">Look at the camera to unlock your locker</p>
     </div>
 
-    <!-- scripts -->
+    <!-- Video Preview -->
+    <div class="face-scan-wrapper">
+      <video id="cameraPreview" autoplay playsinline></video>
+    </div>
+
+    <!-- Status -->
+    <div class="more-info">
+      <h2 id="status">🔄 Connecting to Raspberry Pi...</h2>
+    </div>
+
+    <!-- Scripts -->
+
     <script src="./backend/camera_client.js"></script>
     <script src="./backend/camera_loader.js"></script>
     <script src="./backend/camera_pi.js"></script>
     <script src="./backend/scan.js"></script>
-
-    <!-- footer -->
-    <footer class="footer">
-      <div class="footer-content">
-        <div class="footer-left">
-          <h2 id="end_F">F-LOCK</h2>
-          <p>
-            Tủ khóa thông minh của chúng tôi mang đến sự an toàn và tiện lợi.
-            Hãy biến việc lưu trữ hằng ngày thành một trải nghiệm thông minh và
-            bảo mật hơn!
-          </p>
-          <nav class="footer-nav">
-            <a href="./index.html">Home</a>
-            <a href="./guild.html">User Guide</a>
-            <a href="./open.html">Open Locker</a>
-            <a href="./about_us.html">About</a>
-            <a href="./face_res.html">ID</a>
-          </nav>
-        </div>
-
-        <div class="footer-right">
-          <p>
-            Are you ready to unlock a smarter and more secure experience with
-            our device?
-          </p>
-          <p>
-            Drop us a line at <br />
-            <a href="mailto:aicungvay321@gmail.com" class="email-link">
-              aicungvay321@gmail.com
-            </a>
-          </p>
-        </div>
+  </body>
+  <!-- footer -->
+  <footer class="footer">
+    <div class="footer-content">
+      <div class="footer-left">
+        <h2 id="end_F">F-LOCK</h2>
+        <p>
+          Tủ khóa thông minh của chúng tôi mang đến sự an toàn và tiện lợi. Hãy
+          biến việc lưu trữ hằng ngày thành một trải nghiệm thông minh và bảo
+          mật hơn!
+        </p>
+        <nav class="footer-nav">
+          <a href="./index.html">Home</a>
+          <a href="./guild.html">User Guide</a>
+          <a href="./open.html">Open Locker</a>
+          <a href="./about_us.html">About</a>
+          <a href="./face_res.html">ID</a>
+        </nav>
       </div>
 
-      <hr class="footer-line" />
-      <p class="copyright">© 2025 F-LOCK. All rights reserved.</p>
-    </footer>
-  </body>
+      <div class="footer-right">
+        <p>
+          Are you ready to unlock a smarter and more secure experience with our
+          device?
+        </p>
+        <p>
+          Drop us a line at <br />
+          <a href="mailto:aicungvay321@gmail.com" class="email-link">
+            aicungvay321@gmail.com
+          </a>
+        </p>
+      </div>
+    </div>
+
+    <hr class="footer-line" />
+    <p class="copyright">© 2025 F-LOCK. All rights reserved.</p>
+  </footer>
 </html>
