--- a/scan.html
+++ b/scan.html
@@ -3,20 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- font -->
+    <title>Face Recognition - F-LOCK</title>
+
+    <!-- Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Epilogue:wght@400;600&family=Rubik:wght@400;600&display=swap"
       rel="stylesheet"
     />
-    <title>Face Recognition - F-LOCK</title>
 
     <!-- CSS -->
     <link rel="stylesheet" href="./style/main_header.css" />
     <link rel="stylesheet" href="./style/main_footer.css" />
     <link rel="stylesheet" href="./style/scan.css" />
-    <!-- menu -->
+  </head>
+
+  <body>
+    <!-- Header -->
     <section class="o">
       <div class="menu">
         <h2>F-LOCK</h2>
@@ -31,27 +35,21 @@
       <hr />
     </section>
 
-    <!-- header -->
-    <div class="header">
-      <p id="row1">Face Recognition</p>
-      <h1>Identify and Unlock</h1>
-      <p id="row3">
-        Align your face with the camera for secure verification with F-LOCK.
-      </p>
-    </div>
-  </head>
-
-  <body>
-    <!-- Header -->
     <div class="header">
       <p id="row1">Face Recognition</p>
       <h1>Smart Locker Scan</h1>
       <p id="row3">Look at the camera to unlock your locker</p>
     </div>
 
-    <!-- Video Preview -->
-    <div class="face-scan-wrapper">
-      <video id="cameraPreview" autoplay playsinline></video>
+    <!-- Video / Image Stream -->
+    <div class="face-scan-wrapper" style="text-align: center">
+      <!-- 👇 Thay video bằng img để nhận luồng MJPEG -->
+      <img
+        id="cameraPreview"
+        src=""
+        alt="Camera Stream"
+        style="max-width: 90%; border-radius: 12px"
+      />
     </div>
 
     <!-- Status -->
@@ -60,46 +58,43 @@
     </div>
 
     <!-- Scripts -->
-
-    <script src="./backend/camera_client.js"></script>
-    <script src="./backend/camera_loader.js"></script>
-    <script src="./backend/camera_pi.js"></script>
     <script src="./backend/scan.js"></script>
+
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="footer-content">
+        <div class="footer-left">
+          <h2 id="end_F">F-LOCK</h2>
+          <p>
+            Tủ khóa thông minh của chúng tôi mang đến sự an toàn và tiện lợi.
+            Hãy biến việc lưu trữ hằng ngày thành một trải nghiệm thông minh và
+            bảo mật hơn!
+          </p>
+          <nav class="footer-nav">
+            <a href="./index.html">Home</a>
+            <a href="./guild.html">User Guide</a>
+            <a href="./open.html">Open Locker</a>
+            <a href="./about_us.html">About</a>
+            <a href="./face_res.html">ID</a>
+          </nav>
+        </div>
+
+        <div class="footer-right">
+          <p>
+            Are you ready to unlock a smarter and more secure experience with
+            our device?
+          </p>
+          <p>
+            Drop us a line at <br />
+            <a href="mailto:aicungvay321@gmail.com" class="email-link">
+              aicungvay321@gmail.com
+            </a>
+          </p>
+        </div>
+      </div>
+
+      <hr class="footer-line" />
+      <p class="copyright">© 2025 F-LOCK. All rights reserved.</p>
+    </footer>
   </body>
-  <!-- footer -->
-  <footer class="footer">
-    <div class="footer-content">
-      <div class="footer-left">
-        <h2 id="end_F">F-LOCK</h2>
-        <p>
-          Tủ khóa thông minh của chúng tôi mang đến sự an toàn và tiện lợi. Hãy
-          biến việc lưu trữ hằng ngày thành một trải nghiệm thông minh và bảo
-          mật hơn!
-        </p>
-        <nav class="footer-nav">
-          <a href="./index.html">Home</a>
-          <a href="./guild.html">User Guide</a>
-          <a href="./open.html">Open Locker</a>
-          <a href="./about_us.html">About</a>
-          <a href="./face_res.html">ID</a>
-        </nav>
-      </div>
-
-      <div class="footer-right">
-        <p>
-          Are you ready to unlock a smarter and more secure experience with our
-          device?
-        </p>
-        <p>
-          Drop us a line at <br />
-          <a href="mailto:aicungvay321@gmail.com" class="email-link">
-            aicungvay321@gmail.com
-          </a>
-        </p>
-      </div>
-    </div>
-
-    <hr class="footer-line" />
-    <p class="copyright">© 2025 F-LOCK. All rights reserved.</p>
-  </footer>
 </html>
