--- a/face_id.html
+++ b/face_id.html
@@ -44,7 +44,7 @@
     <!-- Face Capture Section -->
     <div class="face-scan-section">
       <div class="face-scan-wrapper">
-        <video id="cameraPreview" autoplay playsinline></video>
+        <img id="cameraPreview" alt="Raspberry Pi Camera Preview" />
         <button class="take-btn">📸 Take</button>
         <p id="status">Checking Raspberry Pi connection...</p>
       </div>
