--- a/pass_lock.html
+++ b/pass_lock.html
@@ -57,7 +57,7 @@
       </div>
     </div>
     <!-- script -->
-    <script src="./backend/logon.js"></script>
+    <script src="./backend/pass_lock.js"></script>
   </body>
 
   <!-- footer -->
