--- a/detail.html
+++ b/detail.html
@@ -34,6 +34,8 @@
             <p><strong>Phone Number:</strong> <span id="phone"></span></p>
             <p><strong>Password:</strong> <span id="password"></span></p>
             <p><strong>Hint Password:</strong> <span id="hint"></span></p>
+            <!-- ✅ THÊM TRƯỜNG LOCKER CODE MỚI -->
+            <p><strong>Locker Code:</strong> <span id="lockerCode"></span></p>
           </div>
 
           <button id="save-btn" class="menu-btn" style="display: none">
