--- a/pass_lock_login.html
+++ b/pass_lock_login.html
@@ -42,6 +42,7 @@
         </form>
       </div>
     </div>
+    <script src="./backend/pass_lock_login.js"></script>
   </body>
   <footer class="footer">
     <div class="footer-content">
