--- a/pass_lock.html
+++ b/pass_lock.html
@@ -39,12 +39,13 @@
       <p id="row3"></p>
     </div>
 
-    <!-- Form đăng nhập -->
+    <!-- Form đăng ký/cập nhật mật khẩu tủ khóa -->
     <div class="register-container login-container">
       <div class="right-side">
-        <form id="loginForm">
+        <form id="lockerRegisterForm">
+          <!-- ✅ Đổi ID form -->
           <div class="form-group full">
-            <label for="password">Password</label>
+            <label for="password">Locker Password</label>
             <input type="password" id="password" name="password" required />
           </div>
 
@@ -58,6 +59,7 @@
     </div>
     <!-- script -->
     <script src="./backend/pass_lock.js"></script>
+    <!-- ✅ Liên kết đúng script -->
   </body>
 
   <!-- footer -->
