--- a/pass_lock_login.html
+++ b/pass_lock_login.html
@@ -42,6 +42,8 @@
         </form>
       </div>
     </div>
+    <!-- script  -->
+    <script src="./backend/open.js"></script>
     <script src="./backend/pass_lock_login.js"></script>
   </body>
   <footer class="footer">
