--- a/detail.html
+++ b/detail.html
@@ -12,17 +12,16 @@
   </head>
   <body>
     <div class="container">
-      <!-- LEFT SIDE -->
       <div class="left-side">
         <div class="logo">SMART BOX</div>
         <div class="footer-nav">
           <button id="change-btn" class="menu-btn">Change</button>
+          <button id="history-btn" class="menu-btn">History</button>
           <button id="back-btn" class="menu-btn">Back to Menu</button>
           <button id="logout-btn" class="logout-btn">Log Out</button>
         </div>
       </div>
 
-      <!-- RIGHT SIDE -->
       <div class="right-side">
         <div class="form-container">
           <h1 class="headline">Welcome to SMART BOX</h1>
@@ -34,7 +33,6 @@
             <p><strong>Phone Number:</strong> <span id="phone"></span></p>
             <p><strong>Password:</strong> <span id="password"></span></p>
             <p><strong>Hint Password:</strong> <span id="hint"></span></p>
-            <!-- ✅ THÊM TRƯỜNG LOCKER CODE MỚI -->
             <p><strong>Locker Code:</strong> <span id="lockerCode"></span></p>
           </div>
 
