--- a/detail.html
+++ b/detail.html
@@ -34,6 +34,10 @@
             <p><strong>Password:</strong> <span id="password"></span></p>
             <p><strong>Hint Password:</strong> <span id="hint"></span></p>
             <p><strong>Locker Code:</strong> <span id="lockerCode"></span></p>
+            <p>
+              <strong>Registered Locker:</strong>
+              <span id="registeredLocker"></span>
+            </p>
           </div>
 
           <button id="save-btn" class="menu-btn" style="display: none">
