--- a/history.html
+++ b/history.html
@@ -13,24 +13,7 @@
     <link rel="stylesheet" href="style/main_header.css" />
     <link rel="stylesheet" href="style/main_footer.css" />
     <link rel="stylesheet" href="style/logon.css" />
-    <style>
-      .history-list li {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 12px 15px;
-        margin-bottom: 8px;
-        background-color: #1a1a1a;
-        border-radius: 8px;
-        font-size: 15px;
-      }
-      .history-list-span-action {
-        font-weight: 600;
-      }
-      .history-list-span-date {
-        color: #aaa;
-      }
-    </style>
+    <link rel="stylesheet" href="style/history.css" />
   </head>
   <body>
     <section class="o">
@@ -80,5 +63,40 @@
     <script src="./backend/history.js"></script>
   </body>
 
-  <footer class="footer"></footer>
+  <footer class="footer">
+    <div class="footer-content">
+      <div class="footer-left">
+        <h2 id="end_F">F-LOCK</h2>
+        <p>
+          Tủ khóa thông minh của chúng tôi mang đến sự an toàn và tiện lợi. Hãy
+          biến việc lưu trữ hằng ngày thành một trải nghiệm thông minh và bảo
+          mật hơn!
+        </p>
+
+        <nav class="footer-nav">
+          <a href="#">Home</a>
+          <a href="./guild.html">User Guide</a>
+          <a href="./open.html">Open Locker</a>
+          <a href="./about_us.html">About</a>
+          <a href="./face_res.html">ID</a>
+        </nav>
+      </div>
+
+      <div class="footer-right">
+        <p>
+          Are you ready to unlock a smarter and more secure experience with our
+          device?
+        </p>
+        <p>
+          Drop us a line at <br />
+          <a href="mailto:aicungvay321@gmail.com" class="email-link">
+            aicungvay321@gmail.com
+          </a>
+        </p>
+      </div>
+    </div>
+
+    <hr class="footer-line" />
+    <p class="copyright">© 2025 F-LOCK. All rights reserved.</p>
+  </footer>
 </html>
