--- a/index.html
+++ b/index.html
@@ -3,14 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,100..900;1,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Rubik+Mono+One&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
       rel="stylesheet"
     />
-    <!-- css -->
     <link rel="stylesheet" href="./style/main.css" />
     <link rel="stylesheet" href="./style/main_footer.css" />
     <link rel="stylesheet" href="./style/main_slide.css" />
@@ -20,9 +18,7 @@
     <title>Locker Web</title>
   </head>
 
-  <!-- BODY -->
   <body>
-    <!-- menu -->
     <section class="o">
       <div class="menu">
         <h2>F-LOCK</h2>
@@ -38,7 +34,6 @@
       <p id="title">SMART-BOX <br />HỆ THỐNG TỦ<br />THÔNG MINH</p>
     </section>
 
-    <!-- content -->
     <div class="whoweare">
       <p>WHO WE ARE</p>
       <hr />
@@ -57,7 +52,6 @@
         <span>Since <br /><strong>2025</strong></span>
       </div>
     </div>
-    <!-- 4 cái ô vuông của tk đầu bùi quý -->
     <section class="work-section-wrapper">
       <div class="work-section">
         <div class="card">
@@ -123,7 +117,6 @@
             ><span class="text">Remote Control & Alerts</span>
           </li>
         </ul>
-
         <div class="img-placeholder">
           <img
             class="rotated-image"
@@ -133,70 +126,65 @@
         </div>
       </div>
     </section>
-
-    <!-- include JS ở cuối body -->
     <script src="./animation/wwd.jsx"></script>
 
-    <!-- slide -->
-    <!-- slide -->
     <section class="location-slider">
       <div class="slider-viewport">
         <div class="slider-track">
-          <!-- 9 slide -->
-          <a href="./scan.html" class="slide">
+          <a href="#" class="slide" data-locker-id="01">
             <div class="overlay">
               <h2>01</h2>
               <p>LOCATION</p>
-            </div>
-          </a>
-          <a href="./scan.html" class="slide">
+            </div></a
+          >
+          <a href="#" class="slide" data-locker-id="02">
             <div class="overlay">
               <h2>02</h2>
               <p>LOCATION</p>
-            </div>
-          </a>
-          <a href="./scan.html" class="slide">
+            </div></a
+          >
+          <a href="#" class="slide" data-locker-id="03">
             <div class="overlay">
               <h2>03</h2>
               <p>LOCATION</p>
-            </div>
-          </a>
-          <a href="./scan.html" class="slide">
+            </div></a
+          >
+          <a href="#" class="slide" data-locker-id="04">
             <div class="overlay">
               <h2>04</h2>
               <p>LOCATION</p>
-            </div>
-          </a>
-          <a href="./scan.html" class="slide">
+            </div></a
+          >
+          <a href="#" class="slide" data-locker-id="05">
             <div class="overlay">
               <h2>05</h2>
               <p>LOCATION</p>
-            </div>
-          </a>
-          <a href="./scan.html" class="slide">
+            </div></a
+          >
+          <a href="#" class="slide" data-locker-id="06">
             <div class="overlay">
               <h2>06</h2>
               <p>LOCATION</p>
-            </div>
-          </a>
-          <a href="./scan.html" class="slide">
+            </div></a
+          >
+          <a href="#" class="slide" data-locker-id="07">
             <div class="overlay">
               <h2>07</h2>
               <p>LOCATION</p>
-            </div>
-          </a>
-          <a href="./scan.html" class="slide">
+            </div></a
+          >
+          <a href="#" class="slide" data-locker-id="08">
             <div class="overlay">
               <h2>08</h2>
               <p>LOCATION</p>
-            </div>
-          </a>
-          <a href="./scan.html" class="slide">
+            </div></a
+          >
+          <a href="#" class="slide" data-locker-id="09">
             <div class="overlay">
               <h2>09</h2>
               <p>LOCATION</p>
-            </div>
-          </a>
+            </div></a
+          >
         </div>
       </div>
 
@@ -210,11 +198,11 @@
       </div>
     </section>
 
-    <!-- include JS ở cuối body -->
+    <script src="./backend/open.js"></script>
+    <script src="./backend/slide_interaction.js"></script>
     <script src="./animation/slider.jsx"></script>
     <script src="./backend/auth_protect.js"></script>
   </body>
-  <!-- footer -->
   <footer class="footer">
     <div class="footer-content">
       <div class="footer-left">
