--- a/scan.html
+++ b/scan.html
@@ -59,7 +59,7 @@
 
     <!-- Scripts -->
     <script src="./backend/scan.js"></script>
-
+    <script src="./backend/open.js"></script>
     <!-- Footer -->
     <footer class="footer">
       <div class="footer-content">
