--- a/face_log.html
+++ b/face_log.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./style/main_header.css" />
     <link rel="stylesheet" href="./style/main_footer.css" />
     <link rel="stylesheet" href="./style/face_log.css" />
+    <link rel="stylesheet" href="./style/reset_css.css" />
   </head>
   <body>
     <section class="o">
