--- a/face_res.html
+++ b/face_res.html
@@ -7,6 +7,7 @@
     <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
     <link
       href="https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,100..900;1,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Rubik+Mono+One&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
       rel="stylesheet"
@@ -16,6 +17,7 @@
     <link rel="stylesheet" href="./style/main_header.css" />
     <link rel="stylesheet" href="./style/main_footer.css" />
     <link rel="stylesheet" href="./style/face_res.css" />
+    <link rel="stylesheet" href="./style/reset_css.css" />
     <!-- <link rel="stylesheet" href="./style/responsive.css" /> -->
     <!-- menu -->
     <section class="o">
