--- a/pass_lock_login.html
+++ b/pass_lock_login.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./style/main_header.css" />
     <link rel="stylesheet" href="./style/main_footer.css" />
     <link rel="stylesheet" href="./style/pass_lock_login.css" />
+    <link rel="stylesheet" href="./style/reset_css.css" />
   </head>
   <body>
     <section class="o">
