--- a/about_us.html
+++ b/about_us.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="./style/main_footer.css" />
     <link rel="stylesheet" href="./style/about_us.css" />
     <link rel="stylesheet" href="./style/reset_css.css" />
-    <!-- <link rel="stylesheet" href="./style/responsive.css" /> -->
+    <link rel="stylesheet" href="./style/responsive.css" />
     <!-- menu -->
     <section class="o">
       <div class="menu">
