--- a/history.html
+++ b/history.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="style/main_footer.css" />
     <link rel="stylesheet" href="style/logon.css" />
     <link rel="stylesheet" href="style/history.css" />
-    <link rel="stylesheet" href="./style/reset_css.css" />
+    <!-- <link rel="stylesheet" href="./style/reset_css.css" /> -->
   </head>
   <body>
     <section class="o">
