--- a/detail.html
+++ b/detail.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./style/detail.css" />
-    <link rel="stylesheet" href="./style/reset_css.css" />
+    <!-- <link rel="stylesheet" href="./style/reset_css.css" /> -->
     <title>Account Detail</title>
   </head>
   <body>
