--- a/guild.html
+++ b/guild.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./style/main_footer.css" />
     <link rel="stylesheet" href="./style/guild.css" />
     <link rel="stylesheet" href="./style/responsive.css" />
-    <link rel="stylesheet" href="./style/reset_css.css" />
+    <!-- <link rel="stylesheet" href="./style/reset_css.css" /> -->
   </head>
   <body>
     <!-- menu -->
