--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./style/main_header.css" />
     <link rel="stylesheet" href="./style/main_whatwedo.css" />
     <link rel="stylesheet" href="./style/responsive_main.css" />
-    <link rel="stylesheet" href="./style/reset_css.css" />
+    <!-- <link rel="stylesheet" href="./style/reset_css.css" /> -->
     <title>Locker Web</title>
   </head>
 
