--- a/scan.html
+++ b/scan.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="./style/main_header.css" />
     <link rel="stylesheet" href="./style/main_footer.css" />
     <link rel="stylesheet" href="./style/scan.css" />
-    <link rel="stylesheet" href="./style/reset_css.css" />
+    <!-- <link rel="stylesheet" href="./style/reset_css.css" /> -->
   </head>
 
   <body>
