--- a/index.html
+++ b/index.html
@@ -136,56 +136,43 @@
             <div class="overlay">
               <h2>01</h2>
               <p>LOCATION</p>
-            </div></a
-          >
+            </div>
+          </a>
+
           <a href="#" class="slide" data-locker-id="02">
             <div class="overlay">
               <h2>02</h2>
               <p>LOCATION</p>
-            </div></a
-          >
+            </div>
+          </a>
+
           <a href="#" class="slide" data-locker-id="03">
             <div class="overlay">
               <h2>03</h2>
               <p>LOCATION</p>
-            </div></a
-          >
+            </div>
+          </a>
+
           <a href="#" class="slide" data-locker-id="04">
             <div class="overlay">
               <h2>04</h2>
               <p>LOCATION</p>
-            </div></a
-          >
+            </div>
+          </a>
+
           <a href="#" class="slide" data-locker-id="05">
             <div class="overlay">
               <h2>05</h2>
               <p>LOCATION</p>
-            </div></a
-          >
+            </div>
+          </a>
+
           <a href="#" class="slide" data-locker-id="06">
             <div class="overlay">
               <h2>06</h2>
               <p>LOCATION</p>
-            </div></a
-          >
-          <a href="#" class="slide" data-locker-id="07">
-            <div class="overlay">
-              <h2>07</h2>
-              <p>LOCATION</p>
-            </div></a
-          >
-          <a href="#" class="slide" data-locker-id="08">
-            <div class="overlay">
-              <h2>08</h2>
-              <p>LOCATION</p>
-            </div></a
-          >
-          <a href="#" class="slide" data-locker-id="09">
-            <div class="overlay">
-              <h2>09</h2>
-              <p>LOCATION</p>
-            </div></a
-          >
+            </div>
+          </a>
         </div>
       </div>
 
