--- a/face_id.html
+++ b/face_id.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0,viewport-fit=cover"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Epilogue:wght@400;600&family=Rubik:wght@400;600&display=swap"
       rel="stylesheet"
@@ -14,6 +17,7 @@
     <link rel="stylesheet" href="./style/main_footer.css" />
     <link rel="stylesheet" href="./style/face_id.css" />
     <!-- <link rel="stylesheet" href="./style/reset_css.css" /> -->
+    <link rel="stylesheet" href="./style/mobile.css" />
   </head>
 
   <body>
