--- a/face_res.html
+++ b/face_res.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0,viewport-fit=cover"
+    />
 
     <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -19,6 +22,7 @@
     <link rel="stylesheet" href="./style/face_res.css" />
     <!-- <link rel="stylesheet" href="./style/reset_css.css" /> -->
     <!-- <link rel="stylesheet" href="./style/responsive.css" /> -->
+    <link rel="stylesheet" href="./style/mobile.css" />
     <!-- menu -->
     <section class="o">
       <div class="menu">
