--- a/pass_lock_login.html
+++ b/pass_lock_login.html
@@ -2,12 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0,viewport-fit=cover"
+    />
     <title>Locker Code Login - F-LOCK</title>
     <link rel="stylesheet" href="./style/main_header.css" />
     <link rel="stylesheet" href="./style/main_footer.css" />
     <link rel="stylesheet" href="./style/pass_lock_login.css" />
     <!-- <link rel="stylesheet" href="./style/reset_css.css" /> -->
+    <link rel="stylesheet" href="./style/mobile.css" />
   </head>
   <body>
     <section class="o">
