--- a/detail.html
+++ b/detail.html
@@ -2,13 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0,viewport-fit=cover"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Epilogue:wght@400;600&family=Rubik:wght@400;700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./style/detail.css" />
     <!-- <link rel="stylesheet" href="./style/reset_css.css" /> -->
+    <link rel="stylesheet" href="./style/mobile.css" />
     <title>Account Detail</title>
   </head>
   <body>
