--- a/history.html
+++ b/history.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0,viewport-fit=cover"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -15,6 +18,7 @@
     <link rel="stylesheet" href="style/logon.css" />
     <link rel="stylesheet" href="style/history.css" />
     <!-- <link rel="stylesheet" href="./style/reset_css.css" /> -->
+    <link rel="stylesheet" href="./style/mobile.css" />
   </head>
   <body>
     <section class="o">
