--- a/pass_lock.html
+++ b/pass_lock.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0,viewport-fit=cover"
+    />
     <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -17,6 +20,7 @@
     <link rel="stylesheet" href="./style/pass_lock.css" />
     <!-- <link rel="stylesheet" href="./style/reset_css.css" /> -->
     <!-- <link rel="stylesheet" href="./style/responsive.css" /> -->
+    <link rel="stylesheet" href="./style/mobile.css" />
   </head>
   <body>
     <!-- menu -->
