--- a/scan.html
+++ b/scan.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0,viewport-fit=cover"
+    />
     <title>Face Recognition - F-LOCK</title>
 
     <!-- Font -->
@@ -18,6 +21,7 @@
     <link rel="stylesheet" href="./style/main_footer.css" />
     <link rel="stylesheet" href="./style/scan.css" />
     <!-- <link rel="stylesheet" href="./style/reset_css.css" /> -->
+    <link rel="stylesheet" href="./style/mobile.css" />
   </head>
 
   <body>
