--- a/register.html
+++ b/register.html
@@ -20,9 +20,9 @@
     <link rel="stylesheet" href="./style/main_footer.css" />
     <!-- <link rel="stylesheet" href="./style/reset_css.css" /> -->
     <!-- <link rel="stylesheet" href="./style/responsive.css" /> -->
-    <link rel="stylesheet" href="./style/mobile.css" />
+    <link rel="stylesheet" href="./style/mobile_overrides.css" />
   </head>
-  <body>
+  <body class="page-register">
     <!-- menu -->
     <section class="o">
       <div class="menu">
