--- a/menu.html
+++ b/menu.html
@@ -14,9 +14,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./style/menu.css" />
-    <!-- <link rel="stylesheet" href="./style/reset_css.css" /> -->
-    <!-- <link rel="stylesheet" href="./style/responsive.css" /> -->
-    <link rel="stylesheet" href="./style/mobile_overrides.css" />
+    <link rel="stylesheet" href="./style/mobile.css" />
     <title>Menu - F-LOCK</title>
   </head>
   <body class="page-menu">
