--- a/register.html
+++ b/register.html
@@ -18,9 +18,7 @@
     <link rel="stylesheet" href="./style/main_header.css" />
     <link rel="stylesheet" href="./style/register.css" />
     <link rel="stylesheet" href="./style/main_footer.css" />
-    <!-- <link rel="stylesheet" href="./style/reset_css.css" /> -->
-    <!-- <link rel="stylesheet" href="./style/responsive.css" /> -->
-    <link rel="stylesheet" href="./style/mobile_overrides.css" />
+    <link rel="stylesheet" href="./style/mobile.css" />
   </head>
   <body class="page-register">
     <!-- menu -->
